--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,8 @@ jobs:
           keys:
             - 'v1-dependencies-{{ checksum "package.json" }}'
             - v1-dependencies-
-      - run: yarn global add grunt-cli istanbul
-      - run: yarn install
+      - run: npm install -g grunt-cli mocha istanbul
+      - run: npm install
       - save_cache:
           paths:
             - node_modules
